# poetry-pass-rs

./: Cargo.toml  LICENSE  README.md  build.rs  process.py
.github/workflows/: test.yml
data/: poetry.txt  words.txt
examples/: basic_usage.rs
src/: generator.rs  lib.rs  main.rs  provider.rs  transform.rs
tests/: integration.rs
